changed to G1 GC and suppressed unwanted logs